--- a/FRUIT FRESH-PAGE.html
+++ b/FRUIT FRESH-PAGE.html
@@ -23,7 +23,7 @@
     </div>
     <div class="container">
             <ul id="navbar">
-                <li><a href="FRUIT ORGANIC-WEBSITE.html">FRUIT ORGANIC</a></li>
+                <li><a href="index.html">FRUIT ORGANIC</a></li>
                 <li><a href="#FRUIT FRESH">FRUIT FRESH</a></li>
                 <li><a href="#DRY FRUIT">DRY FRUIT</a></li>
                 <li><a href="CATAGORIES.html">CATEGORIES</a></li>
