--- a/CATAGORIES.html
+++ b/CATAGORIES.html
@@ -23,7 +23,7 @@
     </div>
     <div class="container">
             <ul id="navbar">
-                <li><a href="FRUIT ORGANIC-WEBSITE.html">FRUIT ORGANIC</a></li>
+                <li><a href="index.html">FRUIT ORGANIC</a></li>
                 <li><a href="FRUIT FRESH-PAGE.html">FRUIT FRESH</a></li>
                 <li><a href="#DRY FRUIT">DRY FRUIT</a></li>
                 <li><a href="#CATEGORIES">CATEGORIES</a></li>
